# alchemist-apprentice

./: Cargo.toml  README.md  index.html
assets/data/: ingredients.game-data.ron  side_effects.game-data.ron  symptoms.game-data.ron  test.game-data.ron  test.game-data.yaml
assets/level/: bkg.aseprite  blockout.aseprite
assets/level/aesprite/: blockout.aseprite  ui-list-border.aseprite
src/: assets.rs  end.rs  game_data.rs  main.rs  menu.rs  splash.rs
src/assets/: assets_data.rs  assets_game_data.rs  game_data.rs  mod.rs  resources_data.rs  resources_game_data.rs  resources_standard.rs  standard_assets.rs
src/game/: assembly.rs  bjorn.rs  customer.rs  despawn.rs  dialogue.rs  game_phase.rs  information.rs  ingredients.rs  level.rs  mod.rs  potion.rs  potion_assembly.rs  state.rs  status.rs  workshop.rs
src/game/phases/: ailment_statement.rs  concoct.rs  mod.rs  potion_assembly.rs
src/game/states/: concoct.rs  mod.rs  potion_assembly.rs
src/style/: color.rs
src/ui/: buttons.rs  common.rs  disable_ui.rs  game_ui.rs  ingredients.rs  mod.rs  root.rs  root_ui.rs  selection_display.rs
src/world/: camera.rs  common.rs  global_state.rs  level.rs  mod.rs
