[package]
name = "alchemist_apprentice"
version = "0.1.0"
edition = "2021"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = "0.10.1"
bevy-inspector-egui = "0.18.3"
bevy_asset_loader = "0.16.0"
bevy_common_assets = { version = "0.6.0", features = ["ron"] }
serde = { version = "1" }
anyhow = "1"
bevy_pixel_camera = "0.4.0"
rand = "0.8.5"
getrandom = { version = "0.2", features = ["js"] }
rand_chacha = "0.3.1"

[target.wasm32-unknown-unknown]
runner = "wasm-server-runner"
